view update fixes - desktop alignment , search font family

--- a/styles/global.css
+++ b/styles/global.css
@@ -8,12 +8,8 @@
   --breakpoint-desktop: 1440px;
 }
 
-html,
-body {
-  font-family: "Space Mono", monospace;
-}
-
 * {
+  font-family: "Space Mono", monospace;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
